# colorglyph-indexer

./: Cargo.toml  README.md  cheatsheet  zephyr-old.toml  zephyr.toml
bun_tests/: README.md  backfill_accounts.ts  backfill_transactions.ts  bun.lockb  index.ts  package.json  test.ts
src/: glyphs.rs  lib.rs  types.rs
