[package]
name = "zephyr-colorglyph-ingestion"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zephyr-sdk = { version = "0.2.1" }
colorglyph = { git = "https://github.com/Colorglyph/colorglyph-soroban/" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
hex = "0.4.3"
stellar-strkey = "0.0.8"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
